More KAT to AFT or test

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -975,7 +975,7 @@
     </tr>
     <tr>
       <td class="left">testType</td>
-      <td class="left">The test category type (KAT or MCT)</td>
+      <td class="left">The test category type (AFT or MCT)</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1249,7 +1249,7 @@
                       "ptLen": 0,
                       "aadLen": 128,
                       "tagLen": 128,
-                      "testType" : "KAT",
+                      "testType" : "AFT",
                       "tests": [
                         {
                           "tcId": 2171,
@@ -1283,7 +1283,7 @@
                       "ptLen": 0,
                       "aadLen": 136,
                       "tagLen": 128,
-                      "testType" : "KAT",
+                      "testType" : "AFT",
                       "tests": [
                         {
                           "tcId": 2186,
@@ -1305,7 +1305,7 @@
                       "ptLen": 128,
                       "aadLen": 128,
                       "tagLen": 128,
-                      "testType" : "KAT",
+                      "testType" : "AFT",
                       "tests": [
                         {
                           "tcId": 2201,
