More KAT to AFT or test

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -536,7 +536,7 @@
     </tr>
     <tr>
       <td class="left">inEmpty</td>
-      <td class="left">Implementation does not accept Null (zero-length) messages.</td>
+      <td class="left">Implementation does not accept Null (zero-length) messages</td>
       <td class="left">value</td>
       <td class="left">yes, no</td>
       <td class="left">No</td>
