Update Revision to 0.3

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -417,8 +417,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-23" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.3" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-24" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -439,10 +439,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 23, 2017</td>
+  <td class="right">March 24, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 24, 2017</td>
+  <td class="left">Expires: September 25, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -451,7 +451,7 @@
   </table>
 
   <p class="title">Automated Cryptographic Validation Protocol <br />
-  <span class="filename">draft-ietf-acvp-protocol-0.2</span></p>
+  <span class="filename">draft-ietf-acvp-protocol-0.3</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 24, 2017.</p>
+<p>This Internet-Draft will expire on September 25, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -782,7 +782,7 @@
 <div id="xml_json2"/>
 <pre>
 POST /validation/acvp/register HTTP1.2
-User Agent: acvp-client/0.2
+User Agent: acvp-client/0.3
 Host: www.acvp.nist.gov
 Capabilities information(see next section)
 
@@ -823,7 +823,7 @@ Host: www.acvp.nist.gov
 Accept: 
 {
 "operation" : "register",
-"acvVersion" : "0.2",
+"acvVersion" : "0.3",
 "certificateRequest" : "yes",
 "debugRequest" : "no",
 "production" : "no",
@@ -901,7 +901,7 @@ Accept:
 <pre>
 200 OK Response:
 { 
-"version" : "0.2", 
+"acvVersion" : "0.3", 
 "capabilityResponse" : { "vectorSets" : [
                        {"vsId":1437},
                        {"vsId":1438}] } , 
@@ -916,7 +916,7 @@ Accept:
 <div id="xml_json5"/>
 <pre>
 GET /validation/acvp/vectors?vsId=1437  HTTP1.2
-User Agent: acvp-client/0.2
+User Agent: acvp-client/0.3
 Host: www.acvp.nist.gov
 Authorization: Bearer JWT
             </pre>
@@ -931,7 +931,7 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-  "acvVersion": "0.2",
+  "acvVersion": "0.3",
   "vsId": 1437,
   "algorithm": "AES-GCM",
   "direction": "encrypt",
@@ -971,7 +971,7 @@ Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
 "vsId": 1437,
-"version" : 0.2,
+"acvVersion" : 0.3,
 "retry" : 10
 }
            </pre>
@@ -983,12 +983,12 @@ Content-Length: &lt;length of results&gt;
 <div id="xml_json8"/>
 <pre>
    POST /validation/acvp/vectors?vsId=1437 HTTP1.2
-   User Agent: acvp-client/0.2
+   User Agent: acvp-client/0.3
    Host: www.acvp.nist.gov
    Authorization: Bearer JWT
    Accept:   
    {
-   "acvVersion": "0.2",
+   "acvVersion": "0.3",
    "vsId": 1437,
    "testResults": [
    {
@@ -1023,7 +1023,7 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-"version" : "0.2",
+"acvVersion" : "0.3",
 "results" : {
     "vsId" : 1437,
     "disposition" : "incomplete",
@@ -1064,7 +1064,7 @@ Content-Length: &lt;length of results&gt;
 <div id="xml_json10"/>
 <pre>
 POST /validation/acvp/cancel HTTP1.2
-User Agent: acvp-client/0.2
+User Agent: acvp-client/0.3
 Host: www.acvp.nist.gov
 Authorization: Bearer JWT
            </pre>
@@ -1080,7 +1080,7 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-"version" : "0.2",
+"acvVersion" : "0.3",
 "vsId" : &lt;vs-id&gt;,
 "status" : "expired"
 }
@@ -1092,7 +1092,7 @@ Content-Length: &lt;length of results&gt;
 <div id="xml_json12"/>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
 		  "vsId": 1437,
 		  "expiry": "2018-12-31 23:59:59",
                   "algorithm": "AES-GCM",
@@ -1146,7 +1146,7 @@ Content-Length: &lt;length of results&gt;
 <p id="rfc.section.A.p.1">All JSON keywords shall use lower camelCase format with no underscores or hyphens and use the following characters only a-z, A-Z, 0-9. Keywords shall abbreviate common words and phrases wherever possible for brevity.</p>
 <p id="rfc.section.A.p.2">For example: password length - pwLen plain text length - ptLen </p>
 <p id="rfc.section.A.p.3">Keywords should be chosen such that they are informative and brief, for example: </p>
-<p id="rfc.section.A.p.4">{ "acvVersion" : "0.2", "results" : { "disposition" : "incomplete", } </p>
+<p id="rfc.section.A.p.4">{ "acvVersion" : "0.3", "results" : { "disposition" : "incomplete", } </p>
 <p id="rfc.section.A.p.5">Metadata assigned to the keyword may use any format which best reflects the information being represented including hyphens, underscores alternating case, numbers, etc. However, brevity should be a major consideration, for example:</p>
 <p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1", } All metadata representing strings or big numbers shall use double quotes at both ends.  Big numbers require conversion from strings to whatever format is used by the DUT.  Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations.  Something like keyLen or ptLen values would be better used without quotes to avoid having to convert the string to an integer for use in the code.  </p>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-reg-ex2" id="app-reg-ex2">JSON Encoded Error Messages</a></h1>
