--- a/artifacts/acvp_sub_kas_fcc.html
+++ b/artifacts/acvp_sub_kas_fcc.html
@@ -386,7 +386,7 @@
 <link href="#rfc.section.2.7" rel="Chapter" title="2.7 Supported SHA Methods"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
-<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
+<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
 <link href="#rfc.section.4" rel="Chapter" title="4 Test Vector Responses"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
@@ -402,7 +402,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasfcc-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasfcc-0.3" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using KAS FCC algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using KAS FCC algorithms with the ACVP specification." />
@@ -436,7 +436,7 @@
   </table>
 
   <p class="title">ACVP KAS FCC JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkasfcc-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkasfcc-0.3</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -472,7 +472,7 @@
 <li>2.7.   <a href="#rfc.section.2.7">Supported SHA Methods</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
-<li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
+<li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
 </ul><li>4.   <a href="#rfc.section.4">Test Vector Responses</a></li>
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
@@ -585,7 +585,7 @@
     </tr>
     <tr>
       <td class="left">prereqVals</td>
-      <td class="left">Prerequistie algorithm validations</td>
+      <td class="left">Prerequisite algorithm validations</td>
       <td class="left">array of prereqAlgVal objects</td>
       <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
@@ -629,7 +629,7 @@
 </table>
 <p id="rfc.section.2.2.p.2">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
 <h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#scheme_cap_ex" id="scheme_cap_ex">KAS FCC Scheme Capabilities JSON Values</a></h1>
-<p id="rfc.section.2.3.p.1">All other schemem capability advertised is a self-contained JSON object using the following values.</p>
+<p id="rfc.section.2.3.p.1">All other scheme capability advertised is a self-contained JSON object using the following values.</p>
 <div id="rfc.table.3"/>
 <div id="scheme_caps_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -902,7 +902,7 @@
     </tr>
     <tr>
       <td class="left">hmacMacLen</td>
-      <td class="left">HMAC Mac langth in bytes, gte 8</td>
+      <td class="left">HMAC Mac length in bytes, gte 8</td>
       <td class="left">value</td>
       <td class="left">8 or greater</td>
       <td class="left">Yes</td>
@@ -1109,7 +1109,7 @@
     <tr>
       <td class="left">kcRole</td>
       <td class="left">Key confirmation roles supported</td>
-      <td class="left">provider and/or recepient</td>
+      <td class="left">provider and/or recipient</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1121,7 +1121,7 @@
     <tr>
       <td class="left">kcType</td>
       <td class="left">Key confirmation types supported</td>
-      <td class="left">unilaterl and/or bilateral</td>
+      <td class="left">unilateral and/or bilateral</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1174,8 +1174,8 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
-<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each KAS FCC test vector.</p>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
+<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each KAS FCC test vector.</p>
 <div id="rfc.table.7"/>
 <div id="vs_tc_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1191,7 +1191,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1534,7 +1534,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.8"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1616,8 +1616,8 @@
 			          "role" : ["initiator"],
 				  "kdf" : ["concatenation"],
 				  "keyConf" : "yes",
-				  "kcRole" : ["provider", "recepient"],
-				  "kcType" : ["unilaterl", "bilateral"],
+				  "kcRole" : ["provider", "recipient"],
+				  "kcType" : ["unilateral", "bilateral"],
 				  "parmSetFB" :
 				      { "sha" : [224],
 					"ccmKeySize" : [128],
@@ -1635,7 +1635,7 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for KAS FCC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
                   "vsId": 1564,
                   "algorithm": "KAS FCC",
                   "testGroups": [
@@ -1673,7 +1673,7 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for KAS FCC test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1564,
                     "testResults": [
                        {
