--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -401,7 +401,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Foley, J., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-0.3" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
@@ -435,7 +435,7 @@
   </table>
 
   <p class="title">ACVP Symmetric Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subsym-00</span></p>
+  <span class="filename">draft-ietf-acvp-subsym-0.3</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -1238,7 +1238,7 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
                   "vsId": 1564,
                   "algorithm": "AES-GCM",
                   "direction": "encrypt",
@@ -1352,7 +1352,7 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1564,
                     "testResults": [
                         {
@@ -1434,7 +1434,7 @@
 <p id="rfc.section.C.p.2">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
                   "vsId": 1564,
                   "algorithm": "AES-CBC",
                   "direction": "encrypt",
@@ -1458,7 +1458,7 @@
 <p id="rfc.section.C.p.3">The following is a example JSON object for test results sent from the crypto module to the ACVP server for a Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1564,
                     "testResults": [
                         {
@@ -1486,7 +1486,7 @@
 <p id="rfc.section.C.p.4">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1566,
                     "testResults": [
                         {
