--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -388,7 +388,7 @@
 <link href="#rfc.section.2.9" rel="Chapter" title="2.9 Supported SHA Methods"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
-<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
+<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
 <link href="#rfc.section.4" rel="Chapter" title="4 Test Vector Responses"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
@@ -404,7 +404,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasecc-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasecc-0.3" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using KAS ECC algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using KAS ECC algorithms with the ACVP specification." />
@@ -438,7 +438,7 @@
   </table>
 
   <p class="title">ACVP KAS ECC JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkasecc-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkasecc-0.3</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -476,7 +476,7 @@
 <li>2.9.   <a href="#rfc.section.2.9">Supported SHA Methods</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
-<li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
+<li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
 </ul><li>4.   <a href="#rfc.section.4">Test Vector Responses</a></li>
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
@@ -589,7 +589,7 @@
     </tr>
     <tr>
       <td class="left">prereqVals</td>
-      <td class="left">Prerequistie algorithm validations</td>
+      <td class="left">Prerequisite algorithm validations</td>
       <td class="left">array of prereqAlgVal objects</td>
       <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
@@ -672,7 +672,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#scheme_cap_ex" id="scheme_cap_ex">KAS ECC Scheme Capabilities JSON Values</a></h1>
-<p id="rfc.section.2.4.p.1">All other schemem capability advertised is a self-contained JSON object using the following values.</p>
+<p id="rfc.section.2.4.p.1">All other scheme capability advertised is a self-contained JSON object using the following values.</p>
 <div id="rfc.table.4"/>
 <div id="scheme_caps_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -980,7 +980,7 @@
     </tr>
     <tr>
       <td class="left">hmacMacLen</td>
-      <td class="left">HMAC Mac langth in bytes, gte 8</td>
+      <td class="left">HMAC Mac length in bytes, gte 8</td>
       <td class="left">value</td>
       <td class="left">8 or greater</td>
       <td class="left">Yes</td>
@@ -1006,7 +1006,7 @@
 <ul>
   <li>Full Unified</li>
   <li>Full MQV</li>
-  <li>Ephemiral Unified</li>
+  <li>Ephemeral Unified</li>
   <li>One Pass Unified</li>
   <li>One Pass MQV</li>
   <li>One Pass DH</li>
@@ -1219,7 +1219,7 @@
     <tr>
       <td class="left">kcRole</td>
       <td class="left">Key confirmation roles supported</td>
-      <td class="left">provider and/or recepient</td>
+      <td class="left">provider and/or recipient</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1231,7 +1231,7 @@
     <tr>
       <td class="left">kcType</td>
       <td class="left">Key confirmation types supported</td>
-      <td class="left">unilaterl and/or bilateral</td>
+      <td class="left">unilateral and/or bilateral</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1248,8 +1248,8 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
-<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each KAS ECC test vector.</p>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
+<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each KAS ECC test vector.</p>
 <div id="rfc.table.8"/>
 <div id="vs_tc_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1265,7 +1265,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1493,7 +1493,7 @@
     </tr>
     <tr>
       <td class="left">oiLen</td>
-      <td class="left">Length of the OtherInfo field</td>
+      <td class="left">Length of the otherInfo field</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
@@ -1584,7 +1584,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.9"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -1671,8 +1671,8 @@
 			          "role" : ["initiator", "responder"],
 				  "kdf" : ["concatenation", "ASN1"],
 				  "keyConf" : "yes",
-				  "kcRole" : ["provider", "recepient"],
-				  "kcType" : ["unilaterl", "bilateral"],
+				  "kcRole" : ["provider", "recipient"],
+				  "kcType" : ["unilateral", "bilateral"],
 				  "parmSetEB" :
 				      { "spCurve" : "P-224",
 				        "sha" : [224],
@@ -1691,7 +1691,7 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for KAS ECC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
                   "vsId": 1564,
                   "algorithm": "KAS ECC",
                   "testGroups": [
@@ -1742,7 +1742,7 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for KAS ECC test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1564,
                     "testResults": [
                         {
