--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -382,7 +382,7 @@
 <link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported SP800-135 KDF Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
-<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
+<link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Case JSON Schema"/>
 <link href="#rfc.section.4" rel="Chapter" title="4 Test Vector Responses"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Acknowledgements"/>
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
@@ -398,7 +398,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-snmp-00" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkdf135-snmp-0.3" />
   <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SP800-135 SNMP KDF algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SP800-135 SNMP KDF algorithms with the ACVP specification." />
@@ -432,7 +432,7 @@
   </table>
 
   <p class="title">ACVP SNMP Key Derivation Function Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkdf135-snmp-00</span></p>
+  <span class="filename">draft-ietf-acvp-subkdf135-snmp-0.3</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -464,7 +464,7 @@
 <li>2.3.   <a href="#rfc.section.2.3">Supported SP800-135 KDF Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
-<li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
+<li>3.2.   <a href="#rfc.section.3.2">Test Case JSON Schema</a></li>
 </ul><li>4.   <a href="#rfc.section.4">Test Vector Responses</a></li>
 <li>5.   <a href="#rfc.section.5">Acknowledgements</a></li>
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
@@ -570,7 +570,7 @@
     </tr>
     <tr>
       <td class="left">prereqVals</td>
-      <td class="left">Prerequistie algorithm validations</td>
+      <td class="left">Prerequisite algorithm validations</td>
       <td class="left">array of prereqAlgVal objects</td>
       <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
@@ -584,7 +584,7 @@
     </tr>
     <tr>
       <td class="left">engineID</td>
-      <td class="left">SNMP: Two engine IDs in hexidecimal, can be the same</td>
+      <td class="left">SNMP: Two engine IDs in hexadecimal, can be the same</td>
       <td class="left">array</td>
       <td class="left">0-0xF</td>
       <td class="left">No</td>
@@ -690,7 +690,7 @@
   <tbody>
     <tr>
       <td class="left">engineID</td>
-      <td class="left">engine ID as hexidecimal string</td>
+      <td class="left">engine ID as hexadecimal string</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -720,8 +720,8 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
-<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each SP800-135 SNMP KDF test vector.</p>
+<h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a></h1>
+<p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each SP800-135 SNMP KDF test vector.</p>
 <div id="rfc.table.5"/>
 <div id="vs_tc_table6"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -737,7 +737,7 @@
   <tbody>
     <tr>
       <td class="left">tcId</td>
-      <td class="left">Unique numeric identifier for the test case</td>
+      <td class="left">Numeric identifier for the test case, unique across the entire vector set.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -756,7 +756,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.6"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -853,7 +853,7 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 SNMP KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acvVersion": "0.2",
+                  "acvVersion": "0.3",
                   "vsId": 1564,
                   "algorithm": "SNMP",
                   "testGroups": [
@@ -874,7 +874,7 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 SNMP KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acvVersion": "0.2",
+                    "acvVersion": "0.3",
                     "vsId": 1564,
                     "testResults": [
                         {
