--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1237,9 +1237,9 @@
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vsId": 1564,
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1564,
                   "algorithm": "AES-GCM",
                   "direction": "encrypt",
                   "testGroups": [
@@ -1347,13 +1347,14 @@
                     }
                   ]
                 }
+	      ]
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1564,
+                [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1564,
                     "testResults": [
                         {
                             "tcId": 2171,
@@ -1428,14 +1429,15 @@
                             "tag": "48F3D4D7EB4B9FCB924ACC05B3834F98"
                         }
                     ]
-                }
+                 }
+	      ]
 
             </pre>
 <p id="rfc.section.C.p.2">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vsId": 1564,
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1564,
                   "algorithm": "AES-CBC",
                   "direction": "encrypt",
                   "testGroups": [
@@ -1451,15 +1453,17 @@
 			  "iv" : "a771c0fc42300fa7b4c1eca82e1eb2f9",
                           "pt": "8466e3b1680b40f8bae488e2f392ab33"
                         }
-                    ]
-                }
-
+                      ]
+                    }
+		  ]
+	        }
+              ]
             </pre>
 <p id="rfc.section.C.p.3">The following is a example JSON object for test results sent from the crypto module to the ACVP server for a Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1564,
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1564,
                     "testResults": [
                         {
 			  "tcId": 3171,
@@ -1481,23 +1485,26 @@
 			  ]
 		       }	
                     ]
-                }
+		  }
+                ]
             </pre>
 <p id="rfc.section.C.p.4">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1566,
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1566,
                     "testResults": [
                         {
                             "tcId": 2171,
 			    "pt" : "2CE1129D3E2F25468A9EE13ED39C902C"
                         },
+			{
                             "tcId": 2172,
 			    "decryptFail" : "true"
                         }
-                    ]
-                }
+                      ]
+		    }
+                ]
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
