Updates for preamble array

--- a/artifacts/acvp_sub_kdf135_srtp.html
+++ b/artifacts/acvp_sub_kdf135_srtp.html
@@ -977,9 +977,9 @@
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 SRTP KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vsId": 1564,
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1564,
                   "algorithm": "SRTP",
                   "testGroups": [
                     {
@@ -999,13 +999,14 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 SRTP KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1564,
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1564,
                     "testResults": [
                         {
                             "tcId": 2170,
@@ -1018,7 +1019,7 @@
                         }
                     ]
                 }
-
+             ]
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
