--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -2109,9 +2109,9 @@
 <p id="rfc.section.B.p.1">This appendix contains example JSON objects for test vectors sent from the ACVP server to the crypto module.</p>
 <h1 id="rfc.appendix.B.1"><a href="#rfc.appendix.B.1">B.1.</a> <a href="#app-testVectProvProvPrime-ex" id="app-testVectProvProvPrime-ex">Example Test Vectors for keyGen JSON Objects</a></h1>
 <pre>
-   {
-     "acvVersion": "0.3",
-      "vsId": "1133",
+ [
+   { "acvVersion": "0.3" },
+   { "vsId": "1133",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2290,12 +2290,13 @@
              }
      ]
    }
+ ]
 </pre>
 <h1 id="rfc.appendix.B.2"><a href="#rfc.appendix.B.2">B.2.</a> <a href="#app-testVectsigGen-ex" id="app-testVectsigGen-ex">Example Test Vectors for sigGen JSON Objects</a></h1>
 <pre>
-   {
-     "acvVersion": "0.3",
-      "vsId": "1163",
+ [
+   { "acvVersion": "0.3" },
+   { "vsId": "1163",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2355,13 +2356,14 @@
                  ]
              }
        ]
-}
+    }
+  ]
 </pre>
 <h1 id="rfc.appendix.B.3"><a href="#rfc.appendix.B.3">B.3.</a> <a href="#app-testVectsigVer-ex" id="app-testVectsigVer-ex">Example Test Vectors for sigVer JSON Objects</a></h1>
 <pre>
-   {
-     "acvVersion": "0.3",
-      "vsId": "1173",
+ [
+   { "acvVersion": "0.3" },
+   { "vsId": "1173",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2437,16 +2439,18 @@
                  ]
              }
        ]
-}
+    }
+  ]
+
 </pre>
 <p id="rfc.section.B.3.p.1">Note: The ACVP server does retain additional context for each test vector sent to the client in order to verify the results when submitted for validation.  These may include the public key n, the public exponent e, the private key d for each test. Note also that each test for which msg is not between 0 and n -1 should fail.</p>
 <h1 id="rfc.appendix.B.4"><a href="#rfc.appendix.B.4">B.4.</a> <a href="#app-testVectlegacySigVer-ex" id="app-testVectlegacySigVer-ex">Example Test Vectors for legacySigVer JSON Objects</a></h1>
 <p id="rfc.section.B.4.p.1">The format and structure of legacySigVer Test Vector JSON Objects is identical to those for the Test Vectors for sigVer JSON Objects. </p>
 <h1 id="rfc.appendix.B.5"><a href="#rfc.appendix.B.5">B.5.</a> <a href="#app-testcomponentsigprimitive-ex" id="app-testcomponentsigprimitive-ex">Example Test Vectors for componentSigPrimitive JSON Objects</a></h1>
 <pre>
-   {
-     "acvVersion": "0.3",
-      "vsId": "1193",
+ [
+   { "acvVersion": "0.3" },
+   { "vsId": "1193",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2468,14 +2472,15 @@
                  ]
              }
        ]
-}
+    }
+  ]
 </pre>
 <p id="rfc.section.B.5.p.1">Note: The ACVP server does retain additional context for each test vector sent to the client in order to verify the results when submitted for validation. These may include the public key n, the public exponent e, the private key d for each test.  Note also that each test for which msg is not between 0 and n -1 should fail.</p>
 <h1 id="rfc.appendix.B.6"><a href="#rfc.appendix.B.6">B.6.</a> <a href="#app-testcomponentdecprimitive-ex" id="app-testcomponentdecprimitive-ex">Example Test Vectors for componentDecPrimitive JSON Objects</a></h1>
 <pre>
-   {
-     "acvVersion": "0.3",
-      "vsId": "1194",
+ [
+   { "acvVersion": "0.3" },
+   { "vsId": "1194",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2493,16 +2498,17 @@
                  ]
              }
        ]
-}
+    }
+  ]
 </pre>
 <p id="rfc.section.B.6.p.1">Note: The ACVP server does retain additional context for each test vector sent to the client in order to verify the results when submitted for validation. These may include the public key n, the public exponent e, the private key d for each test.  Note also that each test for which msg is not between 0 and n -1 should fail.</p>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Objects</a></h1>
 <h1 id="rfc.appendix.C.1"><a href="#rfc.appendix.C.1">C.1.</a> <a href="#app-keyGen-results-ex" id="app-keyGen-results-ex">Example keyGen Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.1.p.1">The following is a example JSON object for RSA keyGen test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": "1133",
+             [
+                { "acvVersion": "0.3" },
+                { "vsId": "1133",
                     "testResults": [
                     {
                       "tcId" : "1111",
@@ -2772,13 +2778,14 @@
                   }
                  ]
                 }
+             ]
             </pre>
 <h1 id="rfc.appendix.C.2"><a href="#rfc.appendix.C.2">C.2.</a> <a href="#app-sigGen-results-ex" id="app-sigGen-results-ex">Example sigGen Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.2.p.1">The following is a example JSON object for RSA sigGen test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": "1163",
+             [
+                  { "acvVersion": "0.3" },
+                  { "vsId": "1163",
                     "testResults": [
                     {
                       "tcId" : "1165",
@@ -2830,13 +2837,14 @@
                     }
                  ]
              }
+           ]
             </pre>
 <h1 id="rfc.appendix.C.3"><a href="#rfc.appendix.C.3">C.3.</a> <a href="#app-sigVer-results-ex" id="app-sigVer-results-ex">Example sigVer Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.3.p.1">The following is a example JSON object for RSA sigVer test results sent from the crypto module to the ACVP server.</p>
 <pre>
-{
-     "acvVersion": "0.3",
-      "vsId": "1173",
+ [
+    { "acvVersion": "0.3" },
+    { "vsId": "1173",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2882,16 +2890,17 @@
                  ]
              }
        ]
-}
+    }
+  ]
             </pre>
 <h1 id="rfc.appendix.C.4"><a href="#rfc.appendix.C.4">C.4.</a> <a href="#app-legacySigVer-results-ex" id="app-legacySigVer-results-ex">Example legacySigVer Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.4.p.1">The format and structure of the RSA legacySigVer Test Results JSON Objects are identical to those of the RSA sigVer Test Results JSON Objects. </p>
 <h1 id="rfc.appendix.C.5"><a href="#rfc.appendix.C.5">C.5.</a> <a href="#app-componentsig-results-ex" id="app-componentsig-results-ex">Example componentSigPrimitive Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.5.p.1">The following is a example JSON object for RSA componentSigPrimitive test results sent from the crypto module to the ACVP server.</p>
 <pre>
-{
-     "acvVersion": "0.3",
-      "vsId": "1193",
+ [
+    { "acvVersion": "0.3" },
+    { "vsId": "1193",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2910,14 +2919,15 @@
                  ]
              }
        ]
-}
+    }
+  ]
             </pre>
 <h1 id="rfc.appendix.C.6"><a href="#rfc.appendix.C.6">C.6.</a> <a href="#app-componentdec-results-ex" id="app-componentdec-results-ex">Example componentDecPrimitive Test Results JSON Objects</a></h1>
 <p id="rfc.section.C.6.p.1">The following is a example JSON object for RSA componentDecPrimitive test results sent from the crypto module to the ACVP server.</p>
 <pre>
-{
-     "acvVersion": "0.3",
-      "vsId": "1194",
+ [
+    { "acvVersion": "0.3" },
+    { "vsId": "1194",
       "algorithm": "RSA",
       "testGroups" : [
              {
@@ -2939,7 +2949,8 @@
                  ]
              }
        ]
-}
+    }
+  ]
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
