--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-0.3" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-24" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-29" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 24, 2017</td>
+  <td class="right">March 29, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 25, 2017</td>
+  <td class="left">Expires: September 30, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 25, 2017.</p>
+<p>This Internet-Draft will expire on September 30, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1410,9 +1410,9 @@
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for ctrDRBG test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vectorSetId": "1133",
+              [
+                { "acvVersion": "0.3" },
+                { "vectorSetId": "1133",
                   "algorithm": "ctrDRBG",
                   "mode": "3KeyTDEA",
                   "testGroups": [
@@ -1454,12 +1454,13 @@
                     }
                   ]
                 }
+	    ]
             </pre>
 <p id="rfc.section.B.p.2">The following is a example JSON object for hmacDRBG test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vectorSetId": "1146",
+              [
+                { "acvVersion": "0.3" },
+                { "vectorSetId": "1146",
                   "algorithm": "hmacDRBG",
                   "mode": "AES-256",
                   "testGroups": [
@@ -1500,12 +1501,13 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <p id="rfc.section.B.p.3">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested without additional input and personalization data.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vectorSetId": "1156",
+              [
+                { "acvVersion": "0.3" },
+                { "vectorSetId": "1156",
                   "algorithm": "hashDRBG",
                   "mode": "SHA-256",
                   "testGroups": [
@@ -1546,12 +1548,13 @@
                     }
                   ]
                 }
+	     ]
             </pre>
 <p id="rfc.section.B.p.4">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", "reSeed" : "yes" options.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vectorSetId": "1157",
+              [
+                { "acvVersion": "0.3" },
+                { "vectorSetId": "1157",
                   "algorithm": "hashDRBG",
                   "mode": "SHA-256",
                   "testGroups": [
@@ -1596,12 +1599,13 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <p id="rfc.section.B.p.5">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested with "predResistance": "no", "reSeed" : "no" options.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vectorSetId": "1167",
+              [
+                { "acvVersion": "0.3" },
+                { "vectorSetId": "1167",
                   "algorithm": "hashDRBG",
                   "mode": "SHA-256",
                   "testGroups": [
@@ -1642,13 +1646,14 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for ctrDRBG with 3KeyTDEA test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vectorSetId": "1133",
+              [
+                  { "acvVersion": "0.3" },
+                  { "vectorSetId": "1133",
                     "testResults": [
                         {
                             "tcId": "1815",
@@ -1660,13 +1665,13 @@
                         }
                     ]
                 }
-
+             ]
             </pre>
 <p id="rfc.section.C.p.2">The following is a example JSON object for HMAC_DRBG test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vectorSetId":  "1146",
+              [
+                  { "acvVersion": "0.3" },
+                  { "vectorSetId":  "1146",
                     "testResults": [
                         {
                             "tcId": "2111",
@@ -1678,12 +1683,13 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <p id="rfc.section.C.p.3">The following is a example JSON object for hashDRBG test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vectorSetId": "1156",
+              [
+                  { "acvVersion": "0.3" },
+                  { "vectorSetId": "1156",
                     "testResults": [
                         {
                             "tcId": "2151",
@@ -1695,12 +1701,13 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <p id="rfc.section.C.p.4">The following is a example JSON object for hashDRBG test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vectorSetId": "1157",
+              [
+                  { "acvVersion": "0.3" },
+                  { "vectorSetId": "1157",
                     "testResults": [
                         {
                             "tcId": "3151",
@@ -1712,12 +1719,13 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <p id="rfc.section.C.p.5">The following is a example JSON object for hashDRBG test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vectorSetId": "1167",
+              [
+                  { "acvVersion": "0.3" },
+                  { "vectorSetId": "1167",
                     "testResults": [
                         {
                             "tcId": "4151",
@@ -1729,6 +1737,7 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
