--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -1209,9 +1209,9 @@
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is an example JSON object for HMAC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vsId": 1565,
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1565,
                   "algorithm": "HMAC-SHA-1",
                   "testGroups": [
                     {
@@ -1233,12 +1233,13 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <p id="rfc.section.B.p.2">The following is an example JSON object for CMAC test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
-                {
-                  "acvVersion": "0.3",
-                  "vsId": 1566,
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1566,
                   "algorithm": "CMAC-TDES",
                   "testGroups": [
                     {
@@ -1266,13 +1267,14 @@
                     }
                   ]
                 }
+             ]
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is an example JSON object for HMAC test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1565,
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1565,
                     "testResults": [
                         {
                             "tcId": 2172,
@@ -1284,12 +1286,13 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <p id="rfc.section.C.p.2">The following is an example JSON object for CMAC test results sent from the crypto module to the ACVP server.</p>
 <pre>
-                {
-                    "acvVersion": "0.3",
-                    "vsId": 1566,
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1566,
                     "testResults": [
                         {
                             "tcId": 2175,
@@ -1301,6 +1304,7 @@
                        }
                     ]
                 }
+             ]
             </pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
