ptLen update for #100 and acvp-client removal #106

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -761,7 +761,7 @@
   <thead>
     <tr>
       <th class="left">Algorithm</th>
-      <th class="left">Payload</th>
+      <th class="left">ptLen(payload)</th>
       <th class="left">IV/Nonce</th>
       <th class="left">Tag</th>
       <th class="left">AAD</th>
