Add resultsArray description for specs supporting MCT

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1129,6 +1129,16 @@
       <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tvjs">Section 3.2</a> </td>
       <td class="left">array</td>
     </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">resultsArray</td>
+      <td class="left">Array of JSON objects that represent each iteration of a Monte Carlo Test.  Each iteration will contain the key(s), pt, ct and iv(except for ECB mode)</td>
+      <td class="left">array</td>
+    </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.5"><a href="#rfc.section.5">5.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
