--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -687,6 +687,16 @@
       <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tcjs">Section 4.2</a> </td>
       <td class="left">array</td>
     </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">resultsArray</td>
+      <td class="left">Array of JSON objects that represent each iteration of a Monte Carlo Test.  Each iteration will contain an md value.</td>
+      <td class="left">array</td>
+    </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.4.4"><a href="#rfc.section.4.4">4.4.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
@@ -836,7 +846,7 @@
         "tcId": 2175,
         "resultsArray": [
         	"md": "23d1f8655a7c9c2bc3bb56868483611e67cb1b3a",
-			"md": "d3d672efb8e569dc7a37c991a9fc51282412196f"
+		"md": "d3d672efb8e569dc7a37c991a9fc51282412196f"
       	]
     }]
   }]
