--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -708,6 +708,16 @@
       <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tcjs">Section 4.2</a> </td>
       <td class="left">array</td>
     </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">resultsArray</td>
+      <td class="left">Array of JSON objects that represent each iteration of a Monte Carlo Test.  Each iteration will contain an md value.</td>
+      <td class="left">array</td>
+    </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.4.4"><a href="#rfc.section.4.4">4.4.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
