Forgot to add reference to table 2.2

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -574,7 +574,7 @@
     </tr>
     <tr>
       <td class="left">prereqVals</td>
-      <td class="left">prerequistie algorithm validations</td>
+      <td class="left">prerequistie algorithm validations, See <a href="#app-reg-ex">Appendix A</a> for examples</td>
       <td class="left">array of prereqAlgVal objects</td>
       <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
