CCM bytes to bits artifact generation

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -770,10 +770,10 @@
   <tbody>
     <tr>
       <td class="left">AES-CCM</td>
-      <td class="left">Range (min, max), minimum greater than or equal to zero and maximum less than or equal to 32</td>
-      <td class="left">Array of values from 7 to 13</td>
-      <td class="left">Array of values from 4 to 16, even values only</td>
-      <td class="left">Range (min, max), minimum greater than or equal to zero and maximum less than or equal to 65536</td>
+      <td class="left">Range of values {Min: 0, Max: 256, Increment: 8} minimum greater than or equal to zero and maximum less than or equal to 256.</td>
+      <td class="left">Range of values {Min: 56, Max: 104, Increment: 8}  (represents 7 to 13 bytes)</td>
+      <td class="left">Range of values {Min: 36, Max: 128, Increment: 16} (represents from 4 to 16 bytes, even values only)</td>
+      <td class="left">Range of values minimum greater than or equal to zero and maximum less than or equal to 524,288 (2^16)*8)</td>
     </tr>
     <tr>
       <td class="left"/>
